# digitec-live-feed

./: README.md  bun.lockb  compose.yaml  create.sql  package.json  swiss_towns.csv
backend/: .gitignore  Cargo.toml  cache.go  compose.yaml  example.env  go.mod  main.go  types.go
backend-go/: db.go  fetch.go  go.mod  main.go
backend/.sqlx/: query-18aafef073ffda104f139312d76f844128a64427f03bbc666927f2a488225543.json  query-37ad0ad3797f31e3f925ad8ab2cd4c089ca7f93402d581a38cb47a34ac829ab8.json  query-3a63217d224e5d6bc6d326197a88a3b89ee1be8a96a4d86b463e234db5db8737.json  query-52ea63e01f00d98cc24d1c5e5f53eedea779074fd091fea9ad57186855ec4e7f.json  query-669cdc75e43837a430088b6abda82302f74f56af226e1bd9a906e1bc7aa4c967.json  query-d2800dad6d4d1f98bc8abec5818eee2c8fe0e25e15bd7a376618c528a06e9053.json  query-eef5846f91380b69a2866df3d3c81112392984c84c5e65b90236fa376f0dec18.json
backend/docs/: RESEARCH.md
backend/migrations/: 20250329202325_init.sql  20250410173824_city_names.sql  20250410174959_normalize.sql  20250410175053_drop_old_after_normalization.sql  20250412210242_use_internal_ssi_id.sql  20250412224747_add_city_coordinates.sql  20250413214102_drop_city_is_swiss.sql
backend/scripts/: populate_cities.py
backend/src/: db.rs  feed_cache.rs  fetch.rs  main.rs  types.rs
backend/src/models/: api_input.rs  api_output.rs  database.rs  filters.rs  mod.rs  serde_helpers.rs
backend/src/types/: live_feed.rs
go-new-backend/: db.go  feed_cache.go  fetch.go  go.mod  main.go  types.go
rust-new-backend/docs/: RESEARCH.md
rust-new-backend/migrations/: 20250329202325_init.sql
server/: .gitignore  README.md  bun.lockb  compose.yaml  example.env  init.sql  package.json
web/: bun.lockb  example.env  package-lock.json  package.json  tailwind.config.cjs
(+42 files in other folders)
