[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.27"
reqwest = { version = "0.12.15", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
sqlx = { version = "0.8.3", features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "rust_decimal"] }
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
